main.tf
resource "aws_vpc" "this" {
cidr_block = var.cidr
enable_dns_support = true
enable_dns_hostnames = true

tags = merge(var.tags, {
Name = var.name
})
}

resource "aws_internet_gateway" "this" {
vpc_id = aws_vpc.this.id


tags = merge(var.tags, {
Name = "${var.name}-igw"
})
}


resource "aws_subnet" "public" {
count = length(var.public_subnets)
vpc_id = aws_vpc.this.id
cidr_block = var.public_subnets[count.index]
availability_zone = var.azs[count.index]
map_public_ip_on_launch = true


tags = merge(var.tags, {
Name = "${var.name}-public-${count.index}"
"kubernetes.io/role/elb" = "1"
})
}


resource "aws_subnet" "private" {
count = length(var.private_subnets)
vpc_id = aws_vpc.this.id
cidr_block = var.private_subnets[count.index]
availability_zone = var.azs[count.index]


tags = merge(var.tags, {
Name = "${var.name}-private-${count.index}"
"kubernetes.io/role/internal-elb" = "1"
})
}


resource "aws_eip" "nat" {
  vpc = true

  tags = merge(var.tags, {
    Name = "${var.name}-nat-eip"
  })
}


resource "aws_nat_gateway" "this" {
allocation_id = aws_eip.nat.id
subnet_id = aws_subnet.public[0].id


tags = merge(var.tags, {
Name = "${var.name}-nat"
})
}


resource "aws_route_table" "public" {
vpc_id = aws_vpc.this.id


route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.this.id
}
}


resource "aws_route_table" "private" {
vpc_id = aws_vpc.this.id


route {
cidr_block = "0.0.0.0/0"
nat_gateway_id = aws_nat_gateway.this.id
}
}

resource "aws_route_table_association" "public" {
  count          = length(aws_subnet.public)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count          = length(aws_subnet.private)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
